1.建造者模式； 2.责任链模式； 3.命令行模式。

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>abstract-document</module>
         <module>adapter</module>
         <module>bridge</module>
+        <module>builder</module>
+        <module>chain</module>
+        <module>command</module>
     </modules>
 
     <properties>
