--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <module>builder</module>
         <module>chain</module>
         <module>command</module>
+        <module>composite</module>
+        <module>decorator</module>
+        <module>facade</module>
     </modules>
 
     <properties>
