proxy（代理）模式实践

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>decorator</module>
         <module>facade</module>
         <module>flyweight</module>
+        <module>proxy</module>
     </modules>
 
     <properties>
