--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>facade</module>
         <module>flyweight</module>
         <module>proxy</module>
+        <module>interpreter</module>
     </modules>
 
     <properties>
