--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>flyweight</module>
         <module>proxy</module>
         <module>interpreter</module>
+        <module>iterator</module>
     </modules>
 
     <properties>
