--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>proxy</module>
         <module>interpreter</module>
         <module>iterator</module>
+        <module>mediator</module>
     </modules>
 
     <properties>
